# MSET

./: .gitignore  README.md
sanitizer_configs/: asan--.xml  asan_clang.xml  clang.xml  deltapointers.xml  dr_memory.xml  effectivesan.xml  electric_fence.xml  free_guard.xml  hwasan.xml  lowfat.xml  memcheck.xml  qasan.xml  redfat.xml  scudo.xml  snmalloc.xml  softbound_cets.xml  softbound_cets_rev.xml
sanitizer_configs_local/: clang.xml  deltapointers.xml  electric_fence.xml  memcheck.xml  scudo.xml  softbound_cets.xml  softbound_cets_rev.xml
sanitizers/: after_text.ld  before_bss.ld
src/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  config.h  main.cpp  misc.cpp  misc.h
src/evaluator/: evaluator.cpp  evaluator.h  logger.h  sanitizer.cpp  sanitizer.h  test_case_information.cpp  test_case_information.h
src/generator/: code_canvas.cpp  code_canvas.h  generator.cpp  generator.h  property.h
src/generator/primitives/: primitive_pool.cpp  primitive_pool.h
src/generator/primitives/access_types/: access_action.h  access_location.cpp  access_location.h  direct_location.cpp  direct_location.h  read_action.h  stdlib_location.cpp  stdlib_location.h  write_action.h
src/generator/primitives/bug_types/spatial/: linear_ooba.cpp  linear_ooba.h  non_linear_ooba.cpp  non_linear_ooba.h  spatial_bug_type.h  type_confusion.cpp  type_confusion.h
src/generator/primitives/bug_types/spatial/flow/: flow.h  overflow.cpp  overflow.h  underflow.cpp  underflow.h
src/generator/primitives/bug_types/spatial/origin_target_relation/: inter_object.cpp  inter_object.h  intra_object.cpp  intra_object.h  non_object.cpp  non_object.h  origin_target_relation.cpp  origin_target_relation.h
src/generator/primitives/bug_types/temporal/: double_free.cpp  double_free.h  misuse_of_free.cpp  misuse_of_free.h  temporal_bug_type.cpp  temporal_bug_type.h  use_after_star.cpp  use_after_star.h
src/generator/primitives/bug_types/temporal/memory_state/: freed_memory.cpp  freed_memory.h  memory_state.cpp  memory_state.h  used.cpp  used.h
src/generator/primitives/regions/: global_region.cpp  global_region.h  heap_region.cpp  heap_region.h  region.cpp  region.h  stack_region.cpp  stack_region.h
test_cases/: double_free_used_memory_heap_direct_read_0.c  double_free_used_memory_heap_direct_read_1.c  double_free_used_memory_heap_direct_read_validation_0.c  double_free_used_memory_heap_direct_read_validation_1.c  double_free_used_memory_heap_direct_write_0.c  double_free_used_memory_heap_direct_write_1.c  double_free_used_memory_heap_direct_write_validation_0.c  double_free_used_memory_heap_direct_write_validation_1.c  double_free_used_memory_heap_stdlib_read_0.c  double_free_used_memory_heap_stdlib_read_1.c  double_free_used_memory_heap_stdlib_read_validation_0.c  double_free_used_memory_heap_stdlib_read_validation_1.c  double_free_used_memory_heap_stdlib_write_0.c  double_free_used_memory_heap_stdlib_write_1.c  double_free_used_memory_heap_stdlib_write_validation_0.c  double_free_used_memory_heap_stdlib_write_validation_1.c  linear_ooba_global_global_inter_object_overflow_direct_read_0.c  linear_ooba_global_global_inter_object_overflow_direct_read_1.c  linear_ooba_global_global_inter_object_overflow_direct_read_10.c  linear_ooba_global_global_inter_object_overflow_direct_read_11.c  linear_ooba_global_global_inter_object_overflow_direct_read_12.c  linear_ooba_global_global_inter_object_overflow_direct_read_13.c  linear_ooba_global_global_inter_object_overflow_direct_read_14.c  linear_ooba_global_global_inter_object_overflow_direct_read_15.c  linear_ooba_global_global_inter_object_overflow_direct_read_2.c  linear_ooba_global_global_inter_object_overflow_direct_read_3.c  linear_ooba_global_global_inter_object_overflow_direct_read_4.c  linear_ooba_global_global_inter_object_overflow_direct_read_5.c  linear_ooba_global_global_inter_object_overflow_direct_read_6.c  linear_ooba_global_global_inter_object_overflow_direct_read_7.c  linear_ooba_global_global_inter_object_overflow_direct_read_8.c  linear_ooba_global_global_inter_object_overflow_direct_read_9.c  linear_ooba_global_global_inter_object_overflow_direct_read_validation_0.c  linear_ooba_global_global_inter_object_overflow_direct_read_validation_1.c  linear_ooba_global_global_inter_object_overflow_direct_write_0.c  (+3337 more)
