cmake_minimum_required(VERSION 3.5)
project(mset)
add_compile_options(-Wall)
set(CMAKE_CXX_STANDARD 14)

include_directories(".")

add_executable(mset main.cpp
        generator/primitives/regions/region.cpp
        generator/primitives/regions/region.h
        generator/primitives/regions/stack_region.cpp
        generator/primitives/regions/stack_region.h
        generator/primitives/regions/heap_region.cpp
        generator/primitives/regions/heap_region.h
        generator/primitives/regions/global_region.cpp
        generator/primitives/regions/global_region.h
        generator/generator.h
        generator/generator.h
        generator/generator.cpp
        generator/primitives/bug_types/temporal/double_free.cpp
        generator/primitives/bug_types/temporal/double_free.h
        generator/primitives/bug_types/temporal/use_after_star.cpp
        generator/primitives/bug_types/temporal/use_after_star.h
        generator/primitives/bug_types/temporal/misuse_of_free.cpp
        generator/primitives/bug_types/temporal/misuse_of_free.h
        generator/primitives/bug_types/temporal/memory_state/used.cpp
        generator/primitives/bug_types/temporal/memory_state/used.h
        generator/primitives/bug_types/temporal/memory_state/freed_memory.cpp
        generator/primitives/bug_types/temporal/memory_state/freed_memory.h
        generator/primitives/bug_types/temporal/memory_state/memory_state.cpp
        generator/primitives/bug_types/temporal/memory_state/memory_state.h
        generator/primitives/primitive_pool.h
        generator/primitives/bug_types/temporal/temporal_bug_type.cpp
        generator/primitives/bug_types/temporal/temporal_bug_type.h
        generator/primitives/bug_types/spatial/spatial_bug_type.h
        generator/primitives/primitive_pool.cpp
        generator/primitives/access_types/access_action.h
        generator/primitives/access_types/access_location.cpp
        generator/primitives/access_types/access_location.h
        generator/primitives/access_types/write_action.h
        generator/primitives/access_types/read_action.h
        generator/primitives/access_types/direct_location.cpp
        generator/primitives/access_types/direct_location.h
        generator/primitives/access_types/stdlib_location.cpp
        generator/primitives/access_types/stdlib_location.h
        generator/code_canvas.cpp
        generator/code_canvas.h
        generator/property.h
        arg_parser.cpp
        arg_parser.h
        misc.h
        misc.cpp
        evaluator/evaluator.h
        evaluator/evaluator.cpp
        evaluator/sanitizer.cpp
        evaluator/sanitizer.h
        evaluator/tinyxml2.cpp
        evaluator/tinyxml2.h
        evaluator/test_case_information.h
        evaluator/test_case_information.cpp
        generator/primitives/bug_types/spatial/flow/flow.h
        generator/primitives/bug_types/spatial/origin_target_relation/origin_target_relation.cpp
        generator/primitives/bug_types/spatial/origin_target_relation/origin_target_relation.h
        generator/primitives/bug_types/spatial/flow/overflow.cpp
        generator/primitives/bug_types/spatial/flow/overflow.h
        generator/primitives/bug_types/spatial/flow/underflow.cpp
        generator/primitives/bug_types/spatial/flow/underflow.h
        generator/primitives/bug_types/spatial/origin_target_relation/inter_object.cpp
        generator/primitives/bug_types/spatial/origin_target_relation/inter_object.h
        generator/primitives/bug_types/spatial/origin_target_relation/intra_object.cpp
        generator/primitives/bug_types/spatial/origin_target_relation/intra_object.h
        generator/primitives/bug_types/spatial/origin_target_relation/non_object.cpp
        generator/primitives/bug_types/spatial/origin_target_relation/non_object.h
        generator/primitives/bug_types/spatial/type_confusion.cpp
        generator/primitives/bug_types/spatial/type_confusion.h
        generator/primitives/bug_types/spatial/linear_ooba.cpp
        generator/primitives/bug_types/spatial/linear_ooba.h
        generator/primitives/bug_types/spatial/non_linear_ooba.cpp
        generator/primitives/bug_types/spatial/non_linear_ooba.h
        evaluator/logger.h
)
